@@ -321,7 +321,7 @@ class SybaseDDLCompiler(compiler.DDLCompiler):
                         self.dialect.type_compiler.process(column.type)
 
         if column.table is None:
-            raise exc.InvalidRequestError(
+            raise exc.CompileError(
                         "The Sybase dialect requires Table-bound "
                        "columns in order to generate DDL")
         seq_col = column.table._autoincrement_column
